Create the initial work-in-progress simulator

--- a/utilities/simulator/Cargo.toml
+++ b/utilities/simulator/Cargo.toml
@@ -10,3 +10,10 @@ license = "MIT OR Apache-2.0"
 authors = [
     "Umut Şahin <umutsahin@protonmail.com>",
 ]
+
+[dependencies]
+anyhow = { version = "1.0" }
+rafty = { path = "../..", features = ["direct-control"] }
+
+[lints]
+workspace = true
